partial/force-app/main/default/objects/Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, Opportunity__r.Account.FirstName + &quot; &quot;+ Opportunity__r.Account.LastName, Opportunity__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>