partial/force-app/main/default/objects/Transaction__c/fields/AML_Status__c.field-meta.xml
<CustomField>
    <fullName>AML_Status__c</fullName>
    <formula>IF( !ISBLANK(Contact__c), Contact__r.AML_Status__c ,
If( Opportunity__r.Account.IsPersonAccount  ,Opportunity__r.Account.PersonContact.AML_Status__c , Opportunity__r.Primary_Contact__r.AML_Status__c ))</formula>
    <label>AML Status</label>
    <type>Text</type>
</CustomField>