partial/force-app/main/default/objects/Transaction__c/fields/Annex_A__c.field-meta.xml
<CustomField>
    <fullName>Annex_A__c</fullName>
    <description>Checklist for lease of property in compliance to Women&apos;s Charter and Immigration Act</description>
    <inlineHelpText>Checklist for lease of property in compliance to Women&apos;s Charter and Immigration Act</inlineHelpText>
    <label>Annex A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>