partial/force-app/main/default/objects/Transaction__c/fields/Annex_D__c.field-meta.xml
<CustomField>
    <fullName>Annex_D__c</fullName>
    <description>Real Estate Salesperson’s Checklist on Customer Due Diligence (CDD) for Sale and Purchase Transactions</description>
    <inlineHelpText>Real Estate Salesperson’s Checklist on Customer Due Diligence (CDD) for Sale and Purchase Transactions</inlineHelpText>
    <label>Annex D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>