partial/force-app/main/default/objects/Transaction__c/fields/Annex_E1__c.field-meta.xml
<CustomField>
    <fullName>Annex_E1__c</fullName>
    <description>Customer’s Particulars Form for Rental Transactions</description>
    <inlineHelpText>Customer’s Particulars Form for Rental Transactions</inlineHelpText>
    <label>Annex E1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>