partial/force-app/main/default/objects/Transaction__c/fields/Beneficiary_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Birthdate__c</fullName>
    <label>Beneficiary Birthdate</label>
    <type>Date</type>
</CustomField>