partial/force-app/main/default/objects/Transaction__c/fields/Beneficiary_Identification_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Identification_Number_Type__c</fullName>
    <label>Beneficiary Identification Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>E-Pass</fullName>
            </value>
            <value>
                <fullName>S-Pass</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>