partial/force-app/main/default/objects/Transaction__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <label>Beneficiary Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>