partial/force-app/main/default/objects/Transaction__c/fields/Beneficiary_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Occupation__c</fullName>
    <label>Beneficiary Occupation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>