partial/force-app/main/default/objects/Transaction__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, text(Opportunity__r.Account.PersonContact.Birthdate), text( Opportunity__r.Primary_Contact__r.Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Text</type>
</CustomField>