partial/force-app/main/default/objects/Transaction__c/fields/CEA_Exclusive_Lease_Residential_Tenant__c.field-meta.xml
<CustomField>
    <fullName>CEA_Exclusive_Lease_Residential_Tenant__c</fullName>
    <description>Form 8-Exclusive Estate Agency Agreement for the Lease of Residential Property by a Tenant</description>
    <inlineHelpText>Form 8-Exclusive Estate Agency Agreement for the Lease of Residential Property by a Tenant</inlineHelpText>
    <label>CEA Exclusive Lease Residential Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>