partial/force-app/main/default/objects/Transaction__c/fields/CEA_Exclusive_Sale_of_Residential__c.field-meta.xml
<CustomField>
    <fullName>CEA_Exclusive_Sale_of_Residential__c</fullName>
    <description>Form 5-Exclusive Estate Agency Agreement for the Sale of Residential Property</description>
    <inlineHelpText>Form 5-Exclusive Estate Agency Agreement for the Sale of Residential Property</inlineHelpText>
    <label>CEA Exclusive Sale of Residential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>