partial/force-app/main/default/objects/Transaction__c/fields/CEA_Purchase_of_Residential_Property__c.field-meta.xml
<CustomField>
    <fullName>CEA_Purchase_of_Residential_Property__c</fullName>
    <description>Form 2-Estate Agency Agreement for the Purchase of Residential Property</description>
    <inlineHelpText>Form 2-Estate Agency Agreement for the Purchase of Residential Property</inlineHelpText>
    <label>CEA Purchase of Residential Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>