partial/force-app/main/default/objects/Transaction__c/fields/CEA_Sale_of_Residential_Property__c.field-meta.xml
<CustomField>
    <fullName>CEA_Sale_of_Residential_Property__c</fullName>
    <description>Form 1-Estate Agency Agreement for the Sale of Residential Property</description>
    <inlineHelpText>Form 1-Estate Agency Agreement for the Sale of Residential Property</inlineHelpText>
    <label>CEA Sale of Residential Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>