partial/force-app/main/default/objects/Transaction__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, text( Opportunity__r.Account.PersonContact.Citizenship__c ), text( Opportunity__r.Primary_Contact__r.Citizenship__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citizenship</label>
    <type>Text</type>
</CustomField>