partial/force-app/main/default/objects/Transaction__c/fields/CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode__c</fullName>
    <formula>IF( !ISBLANK(Contact__c),TEXT(Contact__r.CountryISOCode__c),
TEXT(Opportunity__r.CountryISOCode__c))</formula>
    <label>Country ISO Code</label>
    <type>Text</type>
</CustomField>