partial/force-app/main/default/objects/Transaction__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, Opportunity__r.Account.PersonContact.Email, Opportunity__r.Primary_Contact__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>