partial/force-app/main/default/objects/Transaction__c/fields/Exclusive_for_Sale_Commercial_Indust__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_for_Sale_Commercial_Indust__c</fullName>
    <label>Exclusive for Sale - Commercial &amp; Indust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>