partial/force-app/main/default/objects/Transaction__c/fields/Identification_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number_Type__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, text(Opportunity__r.Account.PersonContact.IdentificationNumberType__c), text(Opportunity__r.Primary_Contact__r.IdentificationNumberType__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identification Number Type</label>
    <type>Text</type>
</CustomField>