partial/force-app/main/default/objects/Transaction__c/fields/Is_AML_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_AML_Checked__c</fullName>
    <formula>IF( !ISBLANK(Contact__c),  Contact__r.Is_AML_Checked__c ,
If( Opportunity__r.Account.IsPersonAccount , Opportunity__r.Account.PersonContact.Is_AML_Checked__c , Opportunity__r.Primary_Contact__r.Is_AML_Checked__c ))</formula>
    <label>Is AML Checked?</label>
    <type>Checkbox</type>
</CustomField>