partial/force-app/main/default/objects/Transaction__c/fields/Letter_of_Intent_Residential_Corp__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Intent_Residential_Corp__c</fullName>
    <label>Letter of Intent - Residential Corp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>