partial/force-app/main/default/objects/Transaction__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, Opportunity__r.Account.PersonContact.Occupation__c, Opportunity__r.Primary_Contact__r.Occupation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupation</label>
    <type>Text</type>
</CustomField>