partial/force-app/main/default/objects/Transaction__c/fields/Option_to_Purchase_Private_Residential__c.field-meta.xml
<CustomField>
    <fullName>Option_to_Purchase_Private_Residential__c</fullName>
    <label>Option to Purchase - Private Residential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>