partial/force-app/main/default/objects/Transaction__c/fields/PEP_Flagged__c.field-meta.xml
<CustomField>
    <fullName>PEP_Flagged__c</fullName>
    <formula>IF( !ISBLANK(Contact__c),  Contact__r.PEP_Flagged__c  ,
If( Opportunity__r.Account.IsPersonAccount ,Opportunity__r.Account.PersonContact.PEP_Flagged__c , Opportunity__r.Primary_Contact__r.PEP_Flagged__c))</formula>
    <inlineHelpText>Check if Contact is Politically Exposed Persons</inlineHelpText>
    <label>PEP Flagged?</label>
    <type>Checkbox</type>
</CustomField>