partial/force-app/main/default/objects/Transaction__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Id__c</fullName>
    <formula>If( Opportunity__r.Account.IsPersonAccount,Opportunity__r.Account.PersonContactId, Opportunity__r.Primary_Contact__c )</formula>
    <label>Primary Contact Id</label>
    <type>Text</type>
</CustomField>