partial/force-app/main/default/objects/Transaction__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True,  Opportunity__r.Account.FirstName + &quot; &quot;+ Opportunity__r.Account.LastName, Opportunity__r.Primary_Contact__r.FirstName + &quot; &quot; + Opportunity__r.Primary_Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>