partial/force-app/main/default/objects/Transaction__c/fields/SIP_Flagged__c.field-meta.xml
<CustomField>
    <fullName>SIP_Flagged__c</fullName>
    <formula>IF( !ISBLANK(Contact__c),  Contact__r.SIP_Flagged__c  ,
If( Opportunity__r.Account.IsPersonAccount ,Opportunity__r.Account.PersonContact.SIP_Flagged__c , Opportunity__r.Primary_Contact__r.SIP_Flagged__c ))</formula>
    <inlineHelpText>Check if Contact is Special Interest Persons</inlineHelpText>
    <label>SIP Flagged?</label>
    <type>Checkbox</type>
</CustomField>