partial/force-app/main/default/objects/Transaction__c/fields/Tenancy_Agreement_Room__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Agreement_Room__c</fullName>
    <label>Tenancy Agreement - Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Manually Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>