partial/force-app/main/default/objects/Transaction__c/recordTypes/Local_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Local_Purchase</fullName>
    <active>true</active>
    <label>Local Purchase</label>
</RecordType>