partial/force-app/main/default/objects/Transaction__c/recordTypes/Local_Rental.recordType-meta.xml
<RecordType>
    <fullName>Local_Rental</fullName>
    <active>true</active>
    <label>Local Rental</label>
</RecordType>