partial/force-app/main/default/objects/Transaction__c/recordTypes/Oversea_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Purchase</fullName>
    <active>true</active>
    <label>Overseas Purchase</label>
</RecordType>