partial/force-app/main/default/objects/Transaction__c/recordTypes/Oversea_Rental.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Rental</fullName>
    <active>true</active>
    <label>Overseas Rental</label>
</RecordType>