partial/force-app/main/default/objects/Transaction__c/validationRules/Contact_Must_Not_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Must_Not_Be_Empty</fullName>
    <active>true</active>
    <description>Contact must not be empty if Opportunity is Empty</description>
    <errorConditionFormula>AND((ISBLANK( Contact__c )),(ISBLANK( Opportunity__c )))</errorConditionFormula>
    <errorMessage>Contact Cannot Be Blank If Opportunity Is Blank</errorMessage>
</ValidationRule>